Added hibernate lib to dependencies and added hibernate annotations

--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
             <artifactId>log4j</artifactId>
             <version>${log4j.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>4.2.3.Final</version>
+        </dependency>
     </dependencies>
 
 </project>
