--- a/library3000-ui/pom.xml
+++ b/library3000-ui/pom.xml
@@ -1,15 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
-        <artifactId>own-library</artifactId>
-        <groupId>own-library</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <artifactId>library3000</artifactId>
+        <groupId>library3000</groupId>
+        <version>${library3000.version}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>library3000-ui</artifactId>
     <packaging>war</packaging>
-    <name>library3000-ui Maven Webapp</name>
-    <url>http://maven.apache.org</url>
+    <name>library3000-ui</name>
 
     <dependencies>
         <dependency>
