--- a/library3000-ui/pom.xml
+++ b/library3000-ui/pom.xml
@@ -8,12 +8,16 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>library3000-ui</artifactId>
     <packaging>war</packaging>
-    <name>library3000-ui</name>
+    <name>library3000</name>
 
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
         </dependency>
     </dependencies>
 
