--- a/library3000-core/src/main/resources/config.properties
+++ b/library3000-core/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 db.driver=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/library3000
-db.user=user
-db.password=3333
+db.user=root
+db.password=password
 db.dialect=org.hibernate.dialect.MySQLDialect
